--- a/report_prototype.qmd
+++ b/report_prototype.qmd
@@ -489,7 +489,7 @@ Interpreting NDWI:
 ### SPI
 
 
-```{r calc_spi, fig.width = 10, fig.height = 7, echo = FALSE, warning = FALSE, message = FALSE}
+```{r calc_spi, eval = TRUE, fig.width = 10, fig.height = 7, echo = FALSE, warning = FALSE, message = FALSE}
 
 library(SPEI)
 
