--- a/report_prototype.qmd
+++ b/report_prototype.qmd
@@ -232,10 +232,8 @@ bbox <- st_bbox(focal_wgs) %>%
     closest_stations  <- intersect(closest_stations,
                                    list.files(temp_directory))
   
-  focal_weather  <- open_dataset(file.path(temp_directory, closest_stations))
-  
-  focal_weather %>% collect() -> focal_weather
-  
+  focal_weather  <- open_dataset(file.path(temp_directory, closest_stations)) %>%
+    collect()
   
   #fix station names in focal weather (missing in many case)
   
@@ -271,7 +269,15 @@ bbox <- st_bbox(focal_wgs) %>%
   #Generate precip dataset
   
 focal_weather %>%
-  group_by(STNID,NAME,YEAR,MONTH)%>%
+  select(STNID,NAME,YEAR,MONTH,DAY,PRCP) %>%
+  group_by(STNID,NAME,YEAR,MONTH) %>%
+  summarise(n_NAs = sum(is.na(PRCP)),
+            n_days = n(),
+            frac_NAs = n_NAs/n_days) %>%
+  full_join(y = focal_weather,multiple="all") %>%
+  mutate(PRCP = case_when(frac_NAs > 0.5 ~ NA,   
+                          frac_NAs <= 0.5 ~ PRCP)) %>% #this line sets months to NA if most of the data are missing
+  group_by(STNID,NAME,YEAR,MONTH) %>%
   summarise(monthly_precip_mm = sum(na.omit(PRCP)))%>%
   ungroup() %>%
   mutate(date_time = paste(YEAR,MONTH,01,sep = "-"))%>%
@@ -292,7 +298,6 @@ focal_weather %>%
   xts::xts(order.by = .$date_time) -> focal_precip
 
 
-  
   # focal_weather %>%
   #   dplyr::select(date_time, usaf_station, mean_precip_mm) %>%
   # pivot_wider(values_from = mean_precip_mm,
@@ -371,7 +376,7 @@ focal_weather %>%
               label = fires_wgs$Years,
               group = "Fires") %>%
     addMarkers(data = focal_stations_sf,
-               label = focal_stations_sf$station_name,
+               label = focal_stations_sf$NAME,
                group = "Stations") %>%
     hideGroup("Stations") %>%
     addLegend_decreasing(position = "bottomright",
@@ -556,12 +561,15 @@ require(ggplot2)
     pivot_longer(cols = !date_time,
                  names_to = "station_name",
                  values_to = "monthly_precip_mm") %>%
-    group_by(station_name) %>%
-    summarize(fraction_na = sum(is.na(monthly_precip_mm))/length(monthly_precip_mm)) %>%
+    mutate(monthly_precip_mm = as.numeric(monthly_precip_mm)) %>%
+    group_by(station_name)%>%
+    summarize(fraction_na = sum(is.na(monthly_precip_mm))/length(monthly_precip_mm),
+              fraction_zero = sum(monthly_precip_mm ==0 |
+                                 is.na(monthly_precip_mm))/length(monthly_precip_mm)) %>%
     filter(fraction_na < 0.50) %>%
+    filter(fraction_zero < 0.80) %>% #filtering out these low-rainfall ones because they break the SPI
     dplyr::select(station_name)
 
-  
   focal_precip %>%
     as.data.frame() %>%
     .[stations_to_keep$station_name] %>%
@@ -570,6 +578,7 @@ require(ggplot2)
   focal_spi_data %>%
     dplyr::select(!mean) -> focal_spi_data
   
+
     #calculate spi at different temporal windows
 
     spi_1 <- spi(data = ts(focal_spi_data,
@@ -605,6 +614,7 @@ require(ggplot2)
 plot(spi_1)+
   ggtitle('1 Month SPI')+
   scale_x_continuous(expand = c(0, 0))
+
 
 plot(spi_3)+
   ggtitle('3 Month SPI')+
